--- a/style.css
+++ b/style.css
@@ -6,32 +6,40 @@
 .title{
     text-align: center;
     color: white;
-
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-top: 2rem;
 }
 .body__description{
     text-align: center;
     font-size: 15px;
     color: hsla(0, 0%, 100%, 0.75);
-
+    margin-left: 2rem;
+    margin-right: 2rem;
+    font-family: 'Inter';
+    line-height: 1.2rem;
 }
 .data__info{
-    display: flex;
-
+    padding-bottom: 2rem;
 }
 .subdata__info{
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
 }
 .subdata__details{
     text-align: center;
     text-transform: uppercase;
     color: hsla(0, 0%, 100%, 0.6);
     font-family: "Inter";
+    margin-top: 0;
 }
 
 h2{
     text-align: center;
     color: white;
-
+    margin-bottom: 7px;
 }
 body{
     background-color: hsl(233, 47%, 7%);
@@ -48,7 +56,7 @@ body{
 .card{
     background-color: hsl(244, 38%, 16%);
     border-radius: 10px;
-    margin: 2rem 1.5rem;
+    margin: 5rem 1.5rem;
 
 }
 span{
@@ -69,5 +77,8 @@ span{
  .filter__img{
      background-color: hsla(277, 64%, 61%, 40%);
      height: 100%;
-     ;
+     border-top-left-radius: 10px;
+     border-top-right-radius: 10px;
  }
+
+ 
