--- a/style.css
+++ b/style.css
@@ -49,15 +49,12 @@ body{
 .main__content{
     display: flex;
     flex-direction: column;
-    
-
 }
 
 .card{
     background-color: hsl(244, 38%, 16%);
     border-radius: 10px;
     margin: 5rem 1.5rem;
-
 }
 span{
     color: hsla(277, 64%, 61%);
@@ -70,8 +67,7 @@ span{
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-   
-    
+
    
  }
  .filter__img{
@@ -81,4 +77,45 @@ span{
      border-top-right-radius: 10px;
  }
 
- 
+ @media (min-width:900px){
+    .card {
+        display: flex;
+        flex-direction:row-reverse ;
+        margin: 6rem;
+    }
+    .cover__image{
+        background-image: url("/images/image-header-desktop.jpg");
+        border-top-left-radius: 0;
+        border-bottom-right-radius: 10px;
+        height: 60vh;
+    
+    }
+    .filter__img{
+        border-top-left-radius: 0;
+        border-bottom-right-radius: 10px;
+    }
+    .data__info{
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        margin-left: 32px;
+    }
+    .responsive__content{
+        display: flex;
+        flex-direction: column;
+        padding-left: 2rem;
+    }
+    .title{
+        text-align: left;
+    }
+    .body__description{
+        text-align: left;
+    }
+    .subdata__info{
+        text-align: left;
+
+    }
+    h1{
+        text-align: left;
+    }
+ }
